// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCollection should add and remove links 1`] = `
<DocumentFragment>
  <div
    class="font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <div>
        <span
          class="font-semibold"
        >
          Social Media
        </span>
        <div
          class="mt-2 text-theme-neutral-700"
        >
          Tell people more about yourself through social media
        </div>
      </div>
      <div>
        <div
          class="sc-AxiKw dxSZmz flex items-center justify-center w-5 h-5 text-white rounded-full bg-theme-primary-600"
          height="9"
          width="9"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-4"
    >
      <div>
        <div
          class="flex space-x-2"
        >
          <div
            class="flex flex-col w-1/4"
          >
            <div
              class="w-full"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                label="Add media"
              >
                Add media
              </label>
            </div>
            <div
              class="sc-Axmtr jzhOwR flex flex-1"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="downshift-1-label"
                class="relative w-full"
                role="combobox"
              >
                <label
                  for="dropdown-select"
                  id="downshift-1-label"
                >
                  <div
                    class="relative flex items-center w-full flex-inline"
                  >
                    <div
                      class="flex w-full px-4 py-3 pr-12 overflow-hidden border rounded cursor-pointer m-h-20 shadow-sm bg-theme-background border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 hover:outline-none hover:border-theme-primary"
                    >
                      <div
                        class="flex items-center flex-inline"
                      >
                        <div>
                          Twitter
                        </div>
                      </div>
                    </div>
                    <div
                      class="w-12 px-4 py-4 -ml-12 text-lg pointer-events-none text-theme-neutral-dark"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="sc-AxiKw dzBdqj"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            chevron-down.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </label>
                <div
                  class="relative btn-group"
                >
                  <input
                    aria-autocomplete="list"
                    aria-labelledby="downshift-1-label"
                    autocomplete="off"
                    id="downshift-1-input"
                    readonly=""
                    type="hidden"
                    value="twitter"
                  />
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="hidden dropdown-toggle"
                    data-testid="select-dropdown__toggle"
                    data-toggle="dropdown"
                    id="dropdown-select"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                label="Link"
              >
                Link
              </label>
            </div>
            <div
              class="sc-Axmtr jzhOwR"
            >
              <input
                class="sc-AxhCb clCjoe overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary pr-20"
                data-testid="LinkCollection__input-link"
                maxlength="255"
                placeholder=" "
                type="text"
              />
            </div>
          </div>
        </div>
        <button
          class="sc-AxjAm ddJBbC w-full mt-2"
          color="primary"
          data-testid="LinkCollection__add-link"
          type="button"
        >
          Add Link
        </button>
      </div>
      <div
        class="mt-8 mb-2 text-sm text-theme-neutral-700"
      >
        Your media
      </div>
      <div
        class="sc-fzplWN kEUFYN"
        role="table"
      >
        <table
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-1"
                  >
                    Name
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-1"
                  >
                    Link
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-1"
                  >
                     
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          />
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should render 1`] = `
<DocumentFragment>
  <div
    class="font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <div>
        <span
          class="font-semibold"
        >
          Social Media
        </span>
        <div
          class="mt-2 text-theme-neutral-700"
        >
          Tell people more about yourself through social media
        </div>
      </div>
      <div>
        <div
          class="sc-AxiKw cytFlT flex items-center justify-center w-5 h-5 rounded-full text-theme-primary-600 bg-theme-primary-100"
          height="18"
          width="18"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should select a specific link type 1`] = `
<DocumentFragment>
  <div
    class="font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <div>
        <span
          class="font-semibold"
        >
          Social Media
        </span>
        <div
          class="mt-2 text-theme-neutral-700"
        >
          Tell people more about yourself through social media
        </div>
      </div>
      <div>
        <div
          class="sc-AxiKw dxSZmz flex items-center justify-center w-5 h-5 text-white rounded-full bg-theme-primary-600"
          height="9"
          width="9"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-4"
    >
      <div>
        <div
          class="flex space-x-2"
        >
          <div
            class="flex flex-col w-1/4"
          >
            <div
              class="w-full"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                label="Add media"
              >
                Add media
              </label>
            </div>
            <div
              class="sc-Axmtr jzhOwR flex flex-1"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="downshift-2-label"
                class="relative w-full"
                role="combobox"
              >
                <label
                  for="dropdown-select"
                  id="downshift-2-label"
                >
                  <div
                    class="relative flex items-center w-full flex-inline"
                  >
                    <div
                      class="flex w-full px-4 py-3 pr-12 overflow-hidden border rounded cursor-pointer m-h-20 shadow-sm bg-theme-background border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 hover:outline-none hover:border-theme-primary"
                    >
                      <div
                        class="flex items-center flex-inline"
                      >
                        <div
                          class="font-semibold text-theme-neutral-800"
                        >
                           
                        </div>
                      </div>
                    </div>
                    <div
                      class="w-12 px-4 py-4 -ml-12 text-lg pointer-events-none text-theme-neutral-dark"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="sc-AxiKw dzBdqj"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            chevron-down.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </label>
                <div
                  class="relative btn-group"
                >
                  <input
                    aria-autocomplete="list"
                    aria-labelledby="downshift-2-label"
                    autocomplete="off"
                    id="downshift-2-input"
                    readonly=""
                    type="hidden"
                    value=""
                  />
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="hidden dropdown-toggle"
                    data-testid="select-dropdown__toggle"
                    data-toggle="dropdown"
                    id="dropdown-select"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                label="Link"
              >
                Link
              </label>
            </div>
            <div
              class="sc-Axmtr jzhOwR"
            >
              <input
                class="sc-AxhCb clCjoe overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary pr-20"
                data-testid="LinkCollection__input-link"
                maxlength="255"
                placeholder=" "
                type="text"
              />
            </div>
          </div>
        </div>
        <button
          class="sc-AxjAm ddJBbC w-full mt-2"
          color="primary"
          data-testid="LinkCollection__add-link"
          disabled=""
          type="button"
        >
          Add Link
        </button>
      </div>
      <div
        class="mt-8 mb-2 text-sm text-theme-neutral-700"
      >
        Your media
      </div>
      <div
        class="sc-fzplWN kEUFYN"
        role="table"
      >
        <table
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-1"
                  >
                    Primary
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-1"
                  >
                    Name
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-1"
                  >
                    Link
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-xs text-left select-none text-theme-neutral-400"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-1"
                  >
                     
                  </div>
                  <div
                    class="mt-1 text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="border-b border-theme-neutral-200"
            >
              <td
                class="w-16 text-center"
              >
                <input
                  class="sc-fzpans bwXzQt"
                  color="success"
                  data-testid="LinkCollection__selected"
                  type="radio"
                />
              </td>
              <td
                class="w-40 py-6"
              >
                twitter
              </td>
              <td
                class="py-6"
              >
                testing link
              </td>
              <td
                class="w-16 text-right"
              >
                <button
                  class="sc-AxjAm erfwnM"
                  color="primary"
                  data-testid="LinkCollection__remove-link"
                  type="button"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should toggle open/close of link collection 1`] = `
<DocumentFragment>
  <div
    class="font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <div>
        <span
          class="font-semibold"
        >
          Social Media
        </span>
        <div
          class="mt-2 text-theme-neutral-700"
        >
          Tell people more about yourself through social media
        </div>
      </div>
      <div>
        <div
          class="sc-AxiKw cytFlT flex items-center justify-center w-5 h-5 rounded-full text-theme-primary-600 bg-theme-primary-100"
          height="18"
          width="18"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
